--- a/.github/workflows/telegram-report.yml
+++ b/.github/workflows/telegram-report.yml
@@ -75,11 +75,13 @@ jobs:
           MSG="🚀 *New Kernel Released!* 🔥
 
           ▫️ *Kernel:* 4.14.336.Astera
+          ▫️ *Kernel:* 4.14.355.Power
           ▫️ *Kernel:* 4.14.336.Nova
 
           ▫️ *Device:* Begonia
           ▫️ *Non-Patch Variant*
           ▫️ *KernelSU:* ${{ env.KERNELSU_VERSION }}
+             (KernelSU for Power-Kernel is not currently available...)
           ▫️ *KernelSU-Next:* ${{ env.KERNELSU_NEXT_VERSION }}
 
           ▫️ *SUSFS:* Supported
@@ -95,18 +97,20 @@ jobs:
           - SUSFS Module: [Release](https://github.com/sidex15/susfs4ksu-module/releases/latest) | [Nightly](https://nightly.link/sidex15/susfs4ksu-module/workflows/build/v1.5.2+)
           - Mountify Module: [Release](https://github.com/backslashxx/mountify/releases/latest)
 
-          ⚠️ *Built with Begonia-Kernel-Builder:*
-          https://github.com/cvnertnc/Begonia-Kernel-Builder
-
           ⚠️ *Note:* Aster Kernel, It should be tested on new A15 roms... Backup your current kernel before flashing to avoid bootloop risk...
-          ⚠️ *Note:* Nova Kernel, It needs to be tested. Backup your current kernel before flashing to avoid bootloop risk...
+          ⚠️ *Note:* Power Kernel, Backup your current kernel before flashing to avoid bootloop risk...
+          ⚠️ *Note:* Nova Kernel, Backup your current kernel before flashing to avoid bootloop risk...
+
+          *Please Read:*
+          https://t.me/cvnertnc/218
 
           Astera Kernel by [MrErenK](https://t.me/Mr_ErenK)
+          Power Kernel by [Sai Krishna](https://t.me/Saikrishna1504)
           Nova Kernel by [Nova-Kernels Dev](https://github.com/Nova-Kernels)
           KernelSU-Next and Susfs patches by [CEHunter ⚝](https://t.me/the_CEHunter)
 
-          *Follow for Updates:* [cvnertnc](https://t.me/cvnertnc)
-          *Join for Supports:* [cvnertnc-Chat](https://t.me/cvnertnc_chat)
+          *Follow:* [cvnertnc](https://t.me/cvnertnc)
+          *Join:* [cvnertnc-Chat](https://t.me/cvnertnc_chat)
           "
 
           POST="https://api.telegram.org/bot${TG_TOKEN}/sendMessage"
