Build: Added AsteraFork supports

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -257,6 +257,8 @@ jobs:
               patch -p1 < SUSFS/kernel_patches/kernels/power/0001-fs-implement-KSU.patch
             elif [[ "$KNAME" == "nova" ]]; then
               patch -p1 < SUSFS/kernel_patches/kernels/nova/0001-fs-implement-KSU.patch
+            elif [[ "$KNAME" == "asterafork" ]]; then
+              patch -p1 < SUSFS/kernel_patches/kernels/astera-fork/0001-fs-implement-KSU.patch
             else
               patch -p1 < SUSFS/kernel_patches/0001-fs-implement-KSU.patch
             fi
@@ -265,6 +267,8 @@ jobs:
               patch -p1 < SUSFS/kernel_patches/kernels/power/0001-fs-implement-KSUN.patch
             elif [[ "$KNAME" == "nova" ]]; then
               patch -p1 < SUSFS/kernel_patches/kernels/nova/0001-fs-implement-KSUN.patch
+            elif [[ "$KNAME" == "asterafork" ]]; then
+              patch -p1 < SUSFS/kernel_patches/kernels/astera-fork/0001-fs-implement-KSUN.patch
             else
               patch -p1 < SUSFS/kernel_patches/0001-fs-implement-KSUN.patch
             fi
@@ -304,6 +308,8 @@ jobs:
             patch -p1 < SUSFS/kernel_patches/kernels/power/50_add_susfs_in_kernel-4.14.patch
           elif [[ "$KNAME" == "nova" ]]; then
             patch -p1 < SUSFS/kernel_patches/kernels/nova/50_add_susfs_in_kernel-4.14.patch
+          elif [[ "$KNAME" == "asterafork" ]]; then
+            patch -p1 < SUSFS/kernel_patches/kernels/astera-fork/50_add_susfs_in_kernel-4.14.patch
           else
             patch -p1 < SUSFS/kernel_patches/50_add_susfs_in_kernel-4.14.patch
           fi
