Revert "build: change rsuntk/KernelSU"
This reverts commit b19a735177eeb0cdef2bcd63892b140142d2a466.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v3
 
-      - name: Fetch the latest commit from rsuntk/KernelSU
+      - name: Fetch the latest commit from KernelSU-Next/KernelSU-Next
         id: fetch_latest_commit
         run: |
-          curl -s https://api.github.com/repos/rsuntk/KernelSU/commits/next > latest_commit.json
+          curl -s https://api.github.com/repos/KernelSU-Next/KernelSU-Next/commits/next > latest_commit.json
           latest_commit=$(jq -r '.sha' latest_commit.json)
           latest_commit_date=$(jq -r '.commit.author.date' latest_commit.json)
           echo "latest_commit=$latest_commit" >> $GITHUB_ENV
